--- a/gremlin-core/pom.xml
+++ b/gremlin-core/pom.xml
@@ -49,9 +49,9 @@ limitations under the License.
         </dependency>
         <!-- commons-configuration2 requires beanutils because we rely on file loaders -->
         <dependency>
-            <groupId>commons-beanutils</groupId>
-            <artifactId>commons-beanutils</artifactId>
-            <version>1.9.4</version>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-beanutils2</artifactId>
+            <version>2.0.0-M1</version>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
